Efetuando melhorias apontadas pelo Sonarlint